[project]
name = "mustdrifter"
version = "0.1.0"
description = ""
authors = [
    {name = "iguillenp",email = "ibaiguillenpacho@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
    "transformers",
    "stanza",
    "matplotlib",
    "fasttext-numpy2-wheel",
    "bertopic",
    "setuptools",
    "nbformat",
    "frouros",
    "emoji"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
